--- a/notebooks/medicine_script.ipynb
+++ b/notebooks/medicine_script.ipynb
@@ -2,20 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "c2dd34a9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df_med = pd.read_csv('../data/data_files/A_Z_medicines_dataset_of_India.csv', encoding = \"utf-8\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "b9eaaadb",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +29,7 @@
        "      <th></th>\n",
        "      <th>id</th>\n",
        "      <th>name</th>\n",
-       "      <th>price(₹)</th>\n",
+       "      <th>price</th>\n",
        "      <th>Is_discontinued</th>\n",
        "      <th>manufacturer_name</th>\n",
        "      <th>type</th>\n",
@@ -116,12 +104,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   id                      name  price(₹)  Is_discontinued  \\\n",
-       "0   1  Augmentin 625 Duo Tablet    223.42            False   \n",
-       "1   2       Azithral 500 Tablet    132.36            False   \n",
-       "2   3          Ascoril LS Syrup    118.00            False   \n",
-       "3   4      Allegra 120mg Tablet    218.81            False   \n",
-       "4   5            Avil 25 Tablet     10.96            False   \n",
+       "   id                      name   price  Is_discontinued  \\\n",
+       "0   1  Augmentin 625 Duo Tablet  223.42            False   \n",
+       "1   2       Azithral 500 Tablet  132.36            False   \n",
+       "2   3          Ascoril LS Syrup  118.00            False   \n",
+       "3   4      Allegra 120mg Tablet  218.81            False   \n",
+       "4   5            Avil 25 Tablet   10.96            False   \n",
        "\n",
        "                      manufacturer_name       type         pack_size_label  \\\n",
        "0  Glaxo SmithKline Pharmaceuticals Ltd  allopathy     strip of 10 tablets   \n",
@@ -138,18 +126,24 @@
        "4     Pheniramine (25mg)                         NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the CSV file containing the medicines dataset of India and store it in a DataFrame called df_med\n",
+    "df_med = pd.read_csv('../data/data_files/A_Z_medicines_dataset_of_India.csv', encoding = \"utf-8\")\n",
+    "\n",
+    "# Display the first few rows of the DataFrame\n",
     "df_med.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b430dbde",
    "metadata": {},
    "outputs": [
@@ -159,18 +153,19 @@
        "(253973, 9)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Retrieve the shape of the DataFrame df_med\n",
     "df_med.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "870921e7",
    "metadata": {},
    "outputs": [
@@ -196,7 +191,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>id</th>\n",
-       "      <th>price(₹)</th>\n",
+       "      <th>price</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -245,7 +240,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                  id       price(₹)\n",
+       "                  id          price\n",
        "count  253973.000000  253973.000000\n",
        "mean   126987.000000     270.530844\n",
        "std     73315.834296    3029.584134\n",
@@ -256,18 +251,19 @@
        "max    253973.000000  436000.000000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Generate descriptive statistics for the DataFrame df_med\n",
     "df_med.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "26882c64",
    "metadata": {},
    "outputs": [
@@ -276,7 +272,7 @@
       "text/plain": [
        "['id',\n",
        " 'name',\n",
-       " 'price(₹)',\n",
+       " 'price',\n",
        " 'Is_discontinued',\n",
        " 'manufacturer_name',\n",
        " 'type',\n",
@@ -285,19 +281,19 @@
        " 'short_composition2']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_med.columns\n",
+    "# Convert the column names of the DataFrame df_med into a list\n",
     "list(df_med)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "1ea6b65b",
    "metadata": {},
    "outputs": [],
@@ -322,7 +318,8 @@
     "    def benchmark(self):\n",
     "        \"\"\"\n",
     "        This method will set benchmark values for no. of columns and list of headers\n",
-    "        return: no_of_columns, list_of_headers\n",
+    "                \n",
+    "        Returns: no_of_columns, list_of_headers\n",
     "        \"\"\"\n",
     "        no_of_columns = 9\n",
     "        list_of_headers = ['id', 'name', 'price', 'Is_discontinued',\n",
@@ -336,17 +333,16 @@
     "        i)   delimeter check\n",
     "        ii)  header content check\n",
     "        iii) no. of columns check\n",
-    "\n",
-    "        return: delimiter_check, header_content_check, no_of_columns_check\n",
+    "        \n",
+    "        Parameters:\n",
+    "        - no_of_columns (int): The expected number of columns in the dataset.\n",
+    "        - list_of_headers (list): A list of expected headers in the dataset.\n",
+    "        \n",
+    "        Returns: delimiter_check, header_content_check, no_of_columns_check\n",
     "        \"\"\"\n",
     "        delimiter_check = len(self.data.columns) > 1\n",
     "        header_content_check = list_of_headers == list(self.data)\n",
     "        no_of_columns_check = len(self.data.columns) == no_of_columns\n",
-    "#         print(\"delimiter_check=========>\",delimiter_check)\n",
-    "#         print(\"header_content_check=========>\",header_content_check)\n",
-    "#         print(\"no_of_columns_check=========>\",no_of_columns_check)\n",
-    "#         print(\"list_of_headers=========>\",list_of_headers)\n",
-    "#         print(\"list(self.data)===========>\",list(self.data))\n",
     "        return delimiter_check, header_content_check, no_of_columns_check\n",
     "    \n",
     "    def clean_column_names(self):\n",
@@ -354,12 +350,9 @@
     "        This method cleans inconsistent data\n",
     "        i)   lower column name\n",
     "        ii)  replace spacing between column headers with underscore\n",
-    "        iii) format dep_id to integer datatype\n",
     "        \"\"\"\n",
     "        self.data.columns = map(str.lower, self.data.columns)\n",
     "        self.data.columns = self.data.columns.str.replace(\" \", \"_\")\n",
-    "#         department_df['dep_id'] = department_df['dep_id'].astype(int)\n",
-    "#         return department_df\n",
     "    \n",
     "    def write_csv(self, output_file):\n",
     "        \"\"\"\n",
@@ -369,58 +362,44 @@
     "        - output_file (str): The file path of the output CSV file.\n",
     "        \"\"\"\n",
     "        self.data.to_csv(output_file, index=False)\n",
-    "        print(f'Saved cleaned data to {output_file}')\n",
-    "\n",
-    "# Create an instance of DataCleaner\n",
-    "# cleaner = DataCleaner('../data/data_files/A_Z_medicines_dataset_of_India.csv')"
+    "        print(f'Saved cleaned data to {output_file}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "id": "6b33059c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "PermissionError",
-     "evalue": "[Errno 13] Permission denied: '../data/clean_files/clean_medicines_dataset.csv'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mPermissionError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10528\\3488023619.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mdelimiter_check\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mheader_content_check\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mno_of_columns_check\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mcleaner\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclean_column_names\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mcleaner\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'../data/clean_files/clean_medicines_dataset.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;31m#         dpclean.write_clean_csv(department_clean_df)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_10528\\3890644532.py\u001b[0m in \u001b[0;36mwrite_csv\u001b[1;34m(self, output_file)\u001b[0m\n\u001b[0;32m     65\u001b[0m         \u001b[1;33m-\u001b[0m \u001b[0moutput_file\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mThe\u001b[0m \u001b[0mfile\u001b[0m \u001b[0mpath\u001b[0m \u001b[0mof\u001b[0m \u001b[0mthe\u001b[0m \u001b[0moutput\u001b[0m \u001b[0mCSV\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m         \"\"\"\n\u001b[1;32m---> 67\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Saved cleaned data to {output_file}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[0;32m   3549\u001b[0m         )\n\u001b[0;32m   3550\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3551\u001b[1;33m         return DataFrameRenderer(formatter).to_csv(\n\u001b[0m\u001b[0;32m   3552\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3553\u001b[0m             \u001b[0mline_terminator\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mline_terminator\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\format.py\u001b[0m in \u001b[0;36mto_csv\u001b[1;34m(self, path_or_buf, encoding, sep, columns, index_label, mode, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, errors, storage_options)\u001b[0m\n\u001b[0;32m   1178\u001b[0m             \u001b[0mformatter\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1179\u001b[0m         )\n\u001b[1;32m-> 1180\u001b[1;33m         \u001b[0mcsv_formatter\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msave\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1181\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1182\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mcreated_buffer\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\formats\\csvs.py\u001b[0m in \u001b[0;36msave\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    239\u001b[0m         \"\"\"\n\u001b[0;32m    240\u001b[0m         \u001b[1;31m# apply compression and byte/text conversion\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 241\u001b[1;33m         with get_handle(\n\u001b[0m\u001b[0;32m    242\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    243\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\io\\common.py\u001b[0m in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    784\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;34m\"b\"\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    785\u001b[0m             \u001b[1;31m# Encoding\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 786\u001b[1;33m             handle = open(\n\u001b[0m\u001b[0;32m    787\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    788\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mPermissionError\u001b[0m: [Errno 13] Permission denied: '../data/clean_files/clean_medicines_dataset.csv'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved cleaned data to ../data/clean_files/clean_medicines_dataset.csv\n"
      ]
     }
    ],
    "source": [
     "if __name__ == '__main__':\n",
-    "#     dpclean = DepartmentCleaning()\n",
-    "#     department_df = dpclean.read_csv()\n",
-    "#     no_of_columns, list_of_headers = dpclean.benchmark()\n",
-    "#     delimiter_check, header_content_check, no_of_columns_check = dpclean.validation_fn(department_df, no_of_columns,\n",
-    "#                                                                                        list_of_headers)\n",
-    "    \n",
+    "\n",
+    "    # Create an instance of the DataCleaner class and provide the file path to the dataset as a parameter\n",
     "    cleaner = DataCleaner('../data/data_files/A_Z_medicines_dataset_of_India.csv')\n",
     "\n",
-    "    # Load the data\n",
     "    cleaner.load_data()\n",
-    "    \n",
-    "    no_of_columns, list_of_headers = cleaner.benchmark()\n",
-    "    \n",
-    "    delimiter_check, header_content_check, no_of_columns_check = cleaner.validation_fn(no_of_columns, list_of_headers)\n",
-    "    \n",
-    "    if delimiter_check and header_content_check and no_of_columns_check:\n",
-    "        cleaner.clean_column_names()\n",
-    "        cleaner.write_csv('../data/clean_files/clean_medicines_dataset.csv')\n",
     "\n",
-    "#         dpclean.write_clean_csv(department_clean_df)\n",
-    "#         print(\"script executed succesfully for department_details_script.py=========\")\n",
+    "    # Retrieve the expected number of columns and list of expected headers from the data benchmarking process\n",
+    "    no_of_columns, list_of_headers = cleaner.benchmark()\n",
+    "\n",
+    "    # Perform validation on the dataset using the expected number of columns and headers\n",
+    "    delimiter_check, header_content_check, no_of_columns_check = cleaner.validation_fn(no_of_columns, list_of_headers)\n",
+    "\n",
+    "\n",
+    "if delimiter_check and header_content_check and no_of_columns_check:\n",
+    "    # Clean the column names in the dataset\n",
+    "    cleaner.clean_column_names()\n",
+    "    \n",
+    "    # Write the cleaned dataset to a new CSV file\n",
+    "    cleaner.write_csv('../data/clean_files/clean_medicines_dataset.csv')\n",
     "    "
    ]
   },
