--- a/notebooks/medicine_script.ipynb
+++ b/notebooks/medicine_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c2dd34a9",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "4     Pheniramine (25mg)                         NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "b430dbde",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
        "(253973, 9)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
+   "id": "b5d9a40e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id                      int64\n",
+       "name                   object\n",
+       "price                 float64\n",
+       "Is_discontinued          bool\n",
+       "manufacturer_name      object\n",
+       "type                   object\n",
+       "pack_size_label        object\n",
+       "short_composition1     object\n",
+       "short_composition2     object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get the data types of columns\n",
+    "df_med.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "870921e7",
    "metadata": {},
    "outputs": [
@@ -251,7 +282,7 @@
        "max    253973.000000  436000.000000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "id": "1ea6b65b",
    "metadata": {},
    "outputs": [],
@@ -345,14 +376,21 @@
     "        no_of_columns_check = len(self.data.columns) == no_of_columns\n",
     "        return delimiter_check, header_content_check, no_of_columns_check\n",
     "    \n",
-    "    def clean_column_names(self):\n",
+    "    def clean_data(self):\n",
     "        \"\"\"\n",
     "        This method cleans inconsistent data\n",
     "        i)   lower column name\n",
     "        ii)  replace spacing between column headers with underscore\n",
+    "        iii) Fill blank values with NA\n",
+    "        iv)  Filter rows where 'is_discontinued' is False\n",
+    "        \n",
     "        \"\"\"\n",
     "        self.data.columns = map(str.lower, self.data.columns)\n",
     "        self.data.columns = self.data.columns.str.replace(\" \", \"_\")\n",
+    "        self.data.fillna('NA', inplace=True)\n",
+    "        self.data = self.data[self.data['is_discontinued'] == False]\n",
+    "        self.data[['composition1', 'dosage1']] = self.data['short_composition1'].str.extract(r'^(.*?)\\s+\\((.*?)\\)')\n",
+    "        self.data[['composition2', 'dosage2']] = self.data['short_composition2'].str.extract(r'^(.*?)\\s+\\((.*?)\\)')\n",
     "    \n",
     "    def write_csv(self, output_file):\n",
     "        \"\"\"\n",
@@ -367,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "6b33059c",
    "metadata": {},
    "outputs": [
@@ -395,10 +433,9 @@
     "\n",
     "\n",
     "if delimiter_check and header_content_check and no_of_columns_check:\n",
-    "    # Clean the column names in the dataset\n",
-    "    cleaner.clean_column_names()\n",
+    "    # Clean the dataset\n",
+    "    cleaner.clean_data()\n",
     "    \n",
-    "    # Write the cleaned dataset to a new CSV file\n",
     "    cleaner.write_csv('../data/clean_files/clean_medicines_dataset.csv')\n",
     "    "
    ]
@@ -406,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f79560e",
+   "id": "b1e71f08",
    "metadata": {},
    "outputs": [],
    "source": []
